k8s/apps/arr-stack/autobrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autobrr
  namespace: arr-stack
spec:
  selector:
    app: autobrr
  ports:
    - name: http
      port: 7474
      targetPort: 7474
  type: ClusterIP
